--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-persist": "^1.0.2",
     "react-player": "^2.16.0",
@@ -30,6 +31,7 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
