--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "modern-normalize": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-persist": "^1.0.2",
@@ -32,7 +33,8 @@
     "react-router-dom": "^7.1.5",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.3",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
