--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,9 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "images": {
+    "sizes": [640, 750, 828, 1080, 1200],
+    "dangerouslyAllowSVG": true
+  }
 }
